# xml-rpc-rs

./: Cargo.toml
src/: client.rs  error.rs  lib.rs  server.rs
src/xmlfmt/: alias.rs  call.rs  data.rs  de.rs  enum_deserializer.rs  error.rs  fault.rs  member.rs  mod.rs  params.rs  parse.rs  response.rs  ser.rs  to_xml.rs  value.rs  xml.rs
src/xmlfmt/errors/: fmt_error.rs  mod.rs  xml_error.rs
src/xmlfmt/tests/: de.rs  parsevalue.rs  ser.rs
