[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Pure Rust implementation of XML-RPC"
license = "MIT"
name = "xml-rpc"
readme = "README.md"
repository = "https://github.com/adnanademovic/xml-rpc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "^0.22"
error-chain = "^0.12"
ureq = { version = "3", features = ["json"] }
lazy_static = "^1.5"
regex = "^1"
serde = { version = "^1.0", features = ["derive"] }
serde-xml-rs = "^0.6"
serde_bytes = "^0.11"
xml-rs = "^0.8"
url = "^2"
percent-encoding = "2.3.1"
threadpool = "1.8.1"
tiny_http = "0.12.0"
