[package]
description = "Pure Rust implementation of XML-RPC"
license = "MIT"
name = "xml-rpc"
readme = "README.md"
repository = "https://github.com/tiberiumboy/xml-rpc-rs.git"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = { version = "^3", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_with = "^3"                                   # Library used to resolve empty params collection issue.
serde-xml-rs = "^0.8"
tiny_http = "*"
